[gd_scene load_steps=6 format=2]

[ext_resource path="res://_assets/fonts/space_invaders.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://_scenes/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 8 )
script = ExtResource( 2 )

[node name="Points" type="Control" parent="."]
margin_top = 10.0
margin_right = 600.0
margin_bottom = 80.0

[node name="ScoreContainer" type="HBoxContainer" parent="Points"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 270.0
margin_bottom = 32.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Points/ScoreContainer"]
margin_left = 105.0
margin_right = 165.0
margin_bottom = 64.0

[node name="ScoreLabel" type="Label" parent="Points/ScoreContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 22.0
text = "SCORE"
align = 1

[node name="Score" type="Label" parent="Points/ScoreContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 60.0
margin_bottom = 48.0
text = "000"
align = 1

[node name="HighScoreContainer" type="HBoxContainer" parent="Points"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -32.0
margin_bottom = 32.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Points/HighScoreContainer"]
margin_left = 98.0
margin_right = 202.0
margin_bottom = 64.0

[node name="HighScoreLabel" type="Label" parent="Points/HighScoreContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 22.0
text = "HIGHSCORE"
align = 1

[node name="HighScore" type="Label" parent="Points/HighScoreContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 104.0
margin_bottom = 48.0
text = "000"
align = 1

[node name="Status" type="Control" parent="."]
margin_top = 752.0
margin_right = 600.0
margin_bottom = 800.0

[node name="LifePoints" type="Label" parent="Status"]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 38.0
text = "000"

[node name="ReplayMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ReplayMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = 40.0
alignment = 1

[node name="HBPlayContainer" type="HBoxContainer" parent="ReplayMenu/VBoxContainer"]
margin_top = 10.0
margin_right = 200.0
margin_bottom = 38.0
alignment = 1

[node name="Selector" type="Label" parent="ReplayMenu/VBoxContainer/HBPlayContainer"]
margin_left = 25.0
margin_top = 3.0
margin_right = 39.0
margin_bottom = 25.0
text = "> "
percent_visible = -1.0

[node name="PlayAgain" type="Button" parent="ReplayMenu/VBoxContainer/HBPlayContainer"]
margin_left = 43.0
margin_right = 175.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
text = "Play Again?"
flat = true

[node name="HBoxQuitContainer" type="HBoxContainer" parent="ReplayMenu/VBoxContainer"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 70.0
alignment = 1

[node name="Selector" type="Label" parent="ReplayMenu/VBoxContainer/HBoxQuitContainer"]
margin_left = 63.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 25.0
text = "> "
align = 1
percent_visible = 0.0

[node name="Quit" type="Button" parent="ReplayMenu/VBoxContainer/HBoxQuitContainer"]
margin_left = 81.0
margin_right = 137.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="MainMenu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -40.0
margin_right = 200.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_right = 400.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
margin_right = 400.0
margin_bottom = 34.0
alignment = 1

[node name="Start" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 340.0
margin_bottom = 34.0
focus_mode = 0
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "click  here  to  start"
flat = true

[node name="PressStartTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="mouse_entered" from="ReplayMenu/VBoxContainer/HBPlayContainer/PlayAgain" to="." method="_on_PlayAgain_mouse_entered"]
[connection signal="mouse_exited" from="ReplayMenu/VBoxContainer/HBPlayContainer/PlayAgain" to="." method="_on_PlayAgain_mouse_exited"]
[connection signal="pressed" from="ReplayMenu/VBoxContainer/HBPlayContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="mouse_entered" from="ReplayMenu/VBoxContainer/HBoxQuitContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="ReplayMenu/VBoxContainer/HBoxQuitContainer/Quit" to="." method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="ReplayMenu/VBoxContainer/HBoxQuitContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="PressStartTimer" to="." method="_on_PressStartTimer_timeout"]
